# Reproducing-TTT-E2E

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPUTE_BUDGET_ESTIMATE.md  README.md  VASTAI_B1_B2_RUNBOOK.md  external_models_runbook.md  external_pretrained_adaptation_plan.md  phase1_design_notes.md  pretrained_efficiency_research_plan.md  pyproject.toml  report.md  repro_plan.md  reproduction_roadmap.md  research_plan.md  task_board.md
.claude/: settings.local.json
docs/: 125m_ablation_vast_runtime.md  125m_current_status.md  125m_dual_protocol.md  125m_ladder_runbook.md  125m_split_runbook.md  760m_dual_protocol.md
experiments/: external_phase1_pilot_test_external_manifest.json
reference/: README.md
requirements/: 125m_ext32k_runtime.txt
research_protocol/: warmstart_preregistered_plan.yaml
scripts/: 00_data_fetch.py  01_config_inspect.py  02_data_validate.py  03_pretrained_matrix.py  04_make_token_data.py  05_phase1_report.py  06_phase1_pilot.py  07_prepare_external_models.py  08_external_matrix.py  09_external_pilot.py  10_seed_external_import_checkpoints.py  11_external_eval.py  12_external_e2e_research.py  13_dataset_fingerprint.py  14_dataset_card.py  15_import_hf_checkpoint.py  16_audit_checkpoint_compat.py  17_probe_warmstart_init.py  18_eval_matrix.py  19_eval_aggregate.py  20_make_paper_tables.py  21_make_paper_figures.py  22_make_artifact_bundle.py  23_warmstart_registry.py  24_eval_ruler.py  25_run_b1_b2_real.py  26_import_qwen_to_orbax.py  27_mirror_gcs_to_b2.py  28_fetch_b2_dataset.py  29_probe_gcs_zarr.py  30_fetch_author_orbax.py  (+48 more)
(+702 files in other folders)
