[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reproducing-ttt-e2e"
version = "0.1.0"
description = "Local reproduction scaffold for TTT-E2E"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
]

[project.scripts]
train = "ttt.train:main"

[tool.setuptools.packages.find]
include = ["ttt", "hydra_plugins"]
